<resources>
    <string name="app_name">TechDic</string>
    <string name="what_is_techdic">TechDic - что это такое?</string>
    <string name="how_to_use">How to use</string>
    <string name="dictionary">Словарь Dictionary</string>
    <string name="expand">Expand</string>
    <string name="info">Info</string>
    <string name="no_content">No content</string>
    <string name="go">Go</string>
    <string name="greeting_description">Здравствуй, уважаемый пользователь, это приложение TechDic - твой гид по техническим терминам, я рад, что ты выбрал именно меня. \nНадеюсь, ты найдёшь то, что искал, ведь у меня есть не только точные переводы, но и оригинальные примеры. \n\nХорошего и полезного пользования, твой TechDic 🌐</string>
    <string name="what_is_techdic_content">📖 TechDic - это словарь технических терминов, отобранных в ходе анализа различных текстов технической направленности. \nВсего, он содержит 159 лексических единиц, разделённых по алфавиту 📑. \nДанные термины имеют наибольшую степень ясности перевода и лучшее контекстуальное сопровождение (оригинальные /аутентичные примеры) \n\n✍ Словарь будет пополняться по мере научных исследований</string>
    <string name="how_to_use_content">TechDic удобен в пользовании и будет интуитивно понятен любому пользователю 😉. \nСловарь создан в алфавитном порядке по принципу \"Буква - термин\" - Вы нажимаете на нужную букву, затем соответственно открывается окошко с теми терминами, которые начинаются на эту же букву.</string>
</resources>